# claspre2

./: CMakeLists.txt  README  README.md  configure.bat  configure.sh  make_release.sh  todo.txt
app/: CMakeLists.txt  claspre_app.cpp  claspre_app.h  main.cpp
build_vc/vc9/clasp/: clasp.sln
build_vc/vc9/clasp/app/: app.vcproj
lib_exst/: Makefile
lib_exst/src/: extended_stats_calculator.cpp
libclasp/clasp/: clause.h  enumerator.h  minimize_constraint.h  program_builder.h  shared_context.h  solver.h
libclasp/clasp/util/: atomic.h  multi_queue.h  platform.h
libclasp/src/: parallel_solve.cpp  program_builder.cpp  reader.cpp  solve_algorithms.cpp  weight_constraint.cpp
scripts/: .tmpooWam6claspre_out_  csv_feature.py  flat_features.py  map_2_features.py  test.lp
